# DummyMicroservice

./: .gitignore  README.md  config.alloy  docker-compose.yml  example.env  install_kibana.sh  prometheus.yml  pyproject.toml  server.py
utils/: s3_logger.py
